hn_tests/opt/failing/comp-1.hn
ii = {
	h x = incr (incr 5)
	h
}